kubernetes/overlays/eks-hml-01/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: referencia-frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: pdpj-referencia
    alb.ingress.kubernetes.io/group.order: '20'
  labels:
    app: referencia-frontend
    part-of: pdpj-referencia
spec:
  tls:
  - hosts:
    - referencia.stg.pdpj.jus.br
  rules:
  - host: referencia.stg.pdpj.jus.br
    http:
      paths:
      - backend:
          service:
            name: referencia-frontend
            port:
              name: http
        path: /
        pathType: Prefix
